--- a/config/config.yaml
+++ b/config/config.yaml
@@ -16,6 +16,12 @@ data_validation:
 
 
 
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/winequality-red.csv
+
+
+
 
 
 
